# mcp-plotly

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_plotly/: container.py  js_container.py  pool.py  server.py
tests/: test_container.py  test_e2e.py  test_js_container.py  test_pool.py  test_server.py
